<?xml version="1.0"?>
<package format="2">
  <name>ov_tools</name>
  <version>0.0.1</version>
  <description>
    A set of tools for handling odometry transformations within the OpenVINS framework.
  </description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
